feat: new intimacy system
